@@ -1,6 +1,11 @@
 2011-09-14  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	* flumotion/component/muxers/fmp4/fmp4.py:
+	Change version requirements for the muxer
+
+2011-09-14  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	* flumotion/component/muxers/fmp4/fmp4.py:
 	Add missing changes to the last commit
 
 2011-09-14  Andoni Morales Alastruey  <amorales@flumotion.com>
